--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/andreasonny83/shared-terminal/issues"
   },
   "homepage": "https://github.com/andreasonny83/shared-terminal#readme",
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.14.0",
     "gm": "^1.23.0"
   }
